--- a/CodigoFuente/x32/Orbita.VA/Orbita.VAGeneradorEscenarios/Orbita.VAGeneradorEscenarios.csproj
+++ b/CodigoFuente/x32/Orbita.VA/Orbita.VAGeneradorEscenarios/Orbita.VAGeneradorEscenarios.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{0E3EC51A-D639-4815-A4DF-A119362891C3}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CodeGenerator</RootNamespace>
-    <AssemblyName>CodeGenerator</AssemblyName>
+    <RootNamespace>Orbita.VAGeneradorEscenarios</RootNamespace>
+    <AssemblyName>Orbita.VAGeneradorEscenarios</AssemblyName>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
@@ -40,34 +40,35 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\Bin\</OutputPath>
+    <OutputPath>..\..\Comun\Orbita\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>..\bin\CodeGenerator.XML</DocumentationFile>
+    <DocumentationFile>..\..\Comun\Orbita\Orbita.VAGeneradorEscenarios.xml</DocumentationFile>
     <PlatformTarget>x86</PlatformTarget>
+    <NoWarn>1591,1592,1573,1571,1570,1572</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\Bin\</OutputPath>
+    <OutputPath>..\..\Comun\Orbita\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>..\Comun\Orbita\CodeGenerator.XML</DocumentationFile>
+    <DocumentationFile>..\..\Comun\Orbita\Orbita.VAGeneradorEscenarios.xml</DocumentationFile>
     <PlatformTarget>x86</PlatformTarget>
+    <NoWarn>1591,1592,1573,1571,1570,1572</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Ofuscado|AnyCPU'">
-    <OutputPath>..\Bin\</OutputPath>
+    <OutputPath>..\..\Comun\Orbita\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>
-    </DocumentationFile>
+    <DocumentationFile>..\..\Comun\Orbita\Orbita.VAGeneradorEscenarios.xml</DocumentationFile>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
-    <CodeAnalysisLogFile>..\Comun\Orbita\CodeGenerator.exe.CodeAnalysisLog.xml</CodeAnalysisLogFile>
+    <CodeAnalysisLogFile>..\..\Comun\Orbita\CodeGenerator.exe.CodeAnalysisLog.xml</CodeAnalysisLogFile>
     <CodeAnalysisUseTypeNameInSuppression>true</CodeAnalysisUseTypeNameInSuppression>
     <CodeAnalysisModuleSuppressionsFile>GlobalSuppressions.cs</CodeAnalysisModuleSuppressionsFile>
     <ErrorReport>prompt</ErrorReport>
@@ -77,10 +78,16 @@
     <CodeAnalysisRuleDirectories>;C:\Program Files\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
     <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
     <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
+    <NoWarn>1591,1592,1573,1571,1570,1572</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Infragistics2.Win.UltraWinTabControl.v11.2">
+      <HintPath>..\..\Comun\Controles\Infragistics\V11-2\Infragistics2.Win.UltraWinTabControl.v11.2.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Orbita.Utiles, Version=12.226.3.1, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\Comun\Orbita\Orbita.Utiles.dll</HintPath>
+      <HintPath>..\..\Comun\Orbita\Orbita.Utiles.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -131,7 +138,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>..\Bin\Orbita.VAGeneradorEscenarios.bat $(ConfigurationName)</PostBuildEvent>
+    <PostBuildEvent>$(TargetDir)OfuscarVisualStudio.bat $(ConfigurationName) "$(TargetDir)" $(ProjectName) $(TargetExt)</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
