--- a/CodigoFuente/x32/Orbita/Orbita.Utiles/Orbita.Utiles.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.Utiles/Orbita.Utiles.csproj
@@ -125,7 +125,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="hasp_net_windows">
-      <HintPath>..\Comun\Utiles\hasp_net_windows.dll</HintPath>
+      <HintPath>..\..\Comun\Utiles\hasp_net_windows.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
